src/amo/components/App/styles.scss
@import "~normalize.css";
@import "~photon-colors/photon-colors";
@import "~core/css/inc/lib";
@import "~core/css/inc/mixins";
@import "~amo/css/inc/vars";
@import "~ui/css/vars";

html,
body {
  background: $header-base-color;
  height: 100%;
}

html {
  box-sizing: border-box;
}

input,
textarea {
  @include font-regular();

  // Fix search input and possibly other inputs.
  // See https://github.com/mozilla/addons-frontend/issues/3640
  background: $white;
  border: 1px solid $grey-50;
  border-radius: $border-radius-xs;
  box-shadow: none;
  color: $black;
  font-size: $font-size-m-smaller;
  line-height: 1.4;
  padding: 4px;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  @include font-regular();

  color: $body-font-color;
  font-size: $font-size-default;
  line-height: 19px;
}

#react-view {
  height: 100%;
}

.amo {
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

.App-content {
  background: $background-grey;
  flex-grow: 1;
  padding: 0 0 $padding-page;

  @include respond-to(large) {
    padding: 0 0 $padding-page-l;
  }
}

.App-content-wrapper {
  margin: 0 auto;
  max-width: $max-content-width;
}

h1,
h2 {
  @include font-bold();

  color: $primary-font-color;
  font-weight: 600;
}

h1 {
  font-size: $font-size-xl;
  line-height: 1;
}

h2 {
  font-size: 12px;
}

h3 {
  @include font-bold();

  font-size: 14px;
  line-height: 19px;
}

a:link {
  @include font-medium();

  color: $link-color;
}

em {
  @include font-regular-italic();
}

strong {
  @include font-bold();
}

.caption {
  color: $primary-font-color;
  font-size: 10px;
  line-height: 11px;
}

.date-time {
  color: #b1b1b1;
  font-size: 14px;
}

button {
  background: none;
  border: none;
}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

